Remove uses of deprecated Boolean constructor
The change has been generated using the following script in the java
folder:

  for file in `git grep 'new Boolean(' | cut -f 1 -d':' | sort | uniq`; do
    sed 's/new Boolean(/Boolean.valueOf(/' -i $file
  done

This has been doubled by a review of the change to remove the useless
(un)boxing instances.